Created file structure with pages folder

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Yaro';
-  src: url("../assets/YaroOp-Black.ttf");
+  src: url("../src/assets/YaroOp-Black.ttf");
 }
 
 :root {
