added more to main page

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Yaro';
-  src: url("../src/assets/YaroOp-Black.ttf");
+  src: url("../assets/YaroOp-Black.ttf");
 }
 
 :root {
