--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,11 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '@fortawesome/fontawesome-free/css/all.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @font-face {
   font-family: 'Yaro';
