--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '@fortawesome/fontawesome-free/css/all.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 
 @font-face {
   font-family: 'Yaro';
@@ -35,3 +37,18 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* * {
+  box-sizing: border-box;
+}
+  html,body,#root{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background: #f1f4f8;
+  position: fixed;
+} */
