--- a/css/TeamBubble.css
+++ b/css/TeamBubble.css
@@ -15,13 +15,22 @@
 }
 
 .team-bubble {
+    --_transition: 300ms cubic-bezier(0.36, 0.02, 0.09, 1.49);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     padding: 4px;
-    margin: 4px;
     position: relative;
     /* overflow: ; */
     border-radius: 50%;
     width: 110px;
     height: 110px;
+    margin: 10px;
+    scale: 1;
+    overflow: hidden;
+    transition: scale var(--_transition);
 }
 
 .team-bubble-img {
@@ -30,7 +39,69 @@
     height: 100%;
 }
 
+.team-bubble-img-container {
+    position: relative;
+    left: 50%;
+    translate: -50%;
+
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    transition: width var(--_transition),
+    height var(--_transition);
+}
+
 .team-bubble-back {
-    position: absolute;
-    inset: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    gap: 0;
+    margin-top: 4px;
+    transition: margin-top var(--_transition);
+}
+
+.team-bubble-name {
+    /* font-weight: 00; */
+    font-size: 9px;
+    margin-top: -1px;
+    height: 12px;
+}
+
+.team-bubble-role {
+    font-size: 6px;
+}
+
+.team-bubble-button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 4px;
+    width: 100%;
+}
+
+.team-bubble-button {
+    width: 18px;
+    height: 18px;
+    margin-top: 4px;
+}
+
+.team-bubble-button-container>a:nth-child(2) {
+    margin-top: 3px;
+}
+
+.team-bubble:hover {
+    scale: 1.75;
+    z-index: 3;
+}
+
+.team-bubble:hover .team-bubble-img-container {
+    width: 50px;
+    height: 50px;
+}
+
+.team-bubble:hover .team-bubble-back {
+    margin-top: 0;
 }
